--- a/config.json
+++ b/config.json
@@ -3,12 +3,13 @@
   "region": "ap-southeast-2",
   "prefix": "aws.cloudwatch.its-production",
   "pollperiod": 5,
+  "debug": false,
   "namespaces": {
     "AWS/EC2": "ec2",
     "AWS/ELB": "elb",
     "AWS/EBS": "ebs",
     "AWS/CloudFront": "cloudfront",
     "AWS/ES": "elasticsearch",
-    "Linux System": "linux"
+    "System/Linux": "linux"
   }
 }
